--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,25 @@
+annotated-types==0.7.0
+anyio==4.11.0
+click==8.3.0
 fastapi==0.109.0
-uvicorn[standard]==0.27.0
+h11==0.16.0
+httptools==0.6.4
+idna==3.10
+iniconfig==2.1.0
+packaging==25.0
+pluggy==1.6.0
 psycopg2-binary==2.9.9
-python-dotenv==1.0.0
 pydantic==2.5.3
 pydantic-settings==2.1.0
+pydantic_core==2.14.6
+Pygments==2.19.2
+pytest==8.4.2
+python-dotenv==1.0.0
+PyYAML==6.0.3
+sniffio==1.3.1
+starlette==0.35.1
+typing_extensions==4.15.0
+uvicorn==0.27.0
+uvloop==0.21.0
+watchfiles==1.1.0
+websockets==15.0.1
