--- a/pytest.ini
+++ b/pytest.ini
@@ -3,7 +3,7 @@ testpaths = app/tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
-addopts = -v --tb=short
+addopts = --tb=line --no-header -q
 markers =
     slow: marks tests as slow (deselect with '-m "not slow"')
     integration: marks tests as integration tests
