update(infra): ensure test script is copied to container on development environment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,9 @@ services:
           cpus: '2'
 
   app:
-    build: .
+    build: 
+      context: .
+      dockerfile: Dockerfile.development
     container_name: concurrency_app
     environment:
       DATABASE_HOST: postgres
