fix(dev): copy test suite entrypoint to proper location

--- a/Dockerfile.development
+++ b/Dockerfile.development
@@ -19,7 +19,7 @@ RUN pip install --no-cache-dir --upgrade pip && \
 
 # Copy application code
 COPY app/ ./app/
-COPY run_tests.py ./app/
+COPY run_tests.py ./
 
 # Expose port
 EXPOSE 8000
